# TEAM1_I2C

./: .gitignore  1  CMakeLists.txt  README.md  a.out  compile_flags.txt  install.sh  toolchain-rpi.cmake  ~
include/: I2c.hpp  I2c_INA219.hpp  I2c_PcA9685.hpp  mortor_dc.hpp
srcs/: I2c.cpp  I2c_INA219.cpp  I2c_PcA9685.cpp  a.out  main.cpp  servo.cpp
test/: a.out  batry_2.cpp  batry_test.cpp  main.cpp  motor_break.cpp  servo.cpp
